      mapper extension methods to be called as each instance
      is updated/inserted, now honors the insert order
      of the objects given. 
      
    - fixed RLock-related bug in mapper which could deadlock
      upon reentrant mapper compile() calls, something that
      occurs when using declarative constructs inside of
      ForeignKey objects.
      
- sql
    - column.in_(someselect) can now be used as 
      a columns-clause expression without the subquery
      bleeding into the FROM clause [ticket:1074]

- sqlite
    - Overhauled SQLite date/time bind/result processing
      to use regular expressions and format strings, rather
      than strptime/strftime, to generically support
      pre-1900 dates, dates with microseconds.  [ticket:968]

    
0.5.0rc1
========

- orm
    - Query now has delete() and update(values) methods. This allows
      to perform bulk deletes/updates with the Query object.

    - The RowTuple object returned by Query(*cols) now features
      keynames which prefer mapped attribute names over column keys,
      column keys over column names, i.e.  Query(Class.foo,
      Class.bar) will have names "foo" and "bar" even if those are
      not the names of the underlying Column objects.  Direct Column
      objects such as Query(table.c.col) will return the "key"
      attribute of the Column.

    - Added scalar() and value() methods to Query, each return a
      single scalar value.  scalar() takes no arguments and is
      roughly equivalent to first()[0], value()
      takes a single column expression and is roughly equivalent to
      values(expr).next()[0].
      
    - Improved the determination of the FROM clause when placing SQL
      expressions in the query() list of entities.  In particular
      scalar subqueries should not "leak" their inner FROM objects
      out into the enclosing query.

    - Joins along a relation() from a mapped class to a mapped